# Construction-inventory

./: .dockerignore  Dockerfile  ITEMS_TABLE_RESTRUCTURING.md  QUICK_START.md  README.md  check_airtable_fields.py  check_airtable_structure.py  check_field_options.py  check_stock_movements_detailed.py  debug_airtable_fields.py  debug_categories.py  debug_stock_movements.py  debug_tables.py  deploy.sh  explore_airtable.py  fix_existing_categories.py  pyproject.toml  render-deployment-guide.md  render.yaml  requirements.txt  restructure_items_table.py  run.py  test_airtable_fix.py  test_batch_command_integration.py  test_batch_duplicate_detection.py  test_batch_duplicate_integration.py  test_batch_duplicate_processing.py  test_batch_movement_errors.py  test_batch_movement_processing.py  test_batch_movement_summaries.py  test_batch_parser_basic.py  test_batch_parser_defaults.py  test_batch_parser_edge_cases.py  test_bot_local.py  test_category_detection.py  test_connection.py  test_enhanced_airtable_integration.py  test_enhanced_item_structure.py  test_enhanced_item_structure_comprehensive.py  test_enhanced_stock_parser.py  (+10 more)
config/: .env  env.example
dev_journals/: approval-system-implementation-001.md  batch-entries-feature-implementation.md  batch-movement-parser-phase1-implementation-001.md  duplicate-detection-feature-implementation-001.md  enhanced-category-field-complete-implementation-001.md  enhanced-item-structure-implementation-001.md  enhanced-stock-query-and-command-system-001.md  global-parameters-feature-implementation.md  telegram-bot-implementation-001.md  (+4 more)
(+108 files in other folders)
