[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-inventory-bot"
version = "0.1.0"
description = "Telegram-first inventory tracking system for construction company"
authors = [{name = "Trevor Chimtengo"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=20.7",
    "pyairtable>=2.2.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
